--- a/UniversalAnnotator/ProgramSynthesis/Web.config
+++ b/UniversalAnnotator/ProgramSynthesis/Web.config
@@ -9,7 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="StorageConnectionString" value="UseDevelopmentStorage=true;" />
+    <!-- add key="StorageConnectionString" value="UseDevelopmentStorage=true;" / -->
+    <add key="StorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=luiscareco;AccountKey=REPLACEME;BlobEndpoint=https://luiscareco.blob.core.windows.net/;QueueEndpoint=https://luiscareco.queue.core.windows.net/;TableEndpoint=https://luiscareco.table.core.windows.net/;FileEndpoint=https://luiscareco.file.core.windows.net;" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
