--- a/UniversalAnnotator/UniversalAnnotator/UniversalAnnotator.csproj
+++ b/UniversalAnnotator/UniversalAnnotator/UniversalAnnotator.csproj
@@ -133,6 +133,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>5.2.3</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>10.0.3</Version>
+    </PackageReference>
     <PackageReference Include="WindowsAzure.Storage">
       <Version>8.2.1</Version>
     </PackageReference>
